# onon_gfx

./: Cargo.toml
crates/onon_app/: Cargo.toml
crates/onon_app/src/: app.rs  canvas.rs  handler.rs  lib.rs
crates/onon_internals/: Cargo.toml
crates/onon_internals/src/: lib.rs
crates/onon_log/: Cargo.toml
crates/onon_log/src/: init_log.rs  lib.rs
crates/onon_render/: Cargo.toml
crates/onon_render/src/: lib.rs  queries.rs  render_object.rs  render_pipeline.rs  renderer.rs  shader_pass.rs  texture_array_manager.rs  texture_manager.rs
crates/onon_render/src/mesh/: mesh2d.rs  mod.rs  vertex.rs
crates/onon_render/src/render_resource/: frame_context.rs  mod.rs  render_pipeline.rs  render_state.rs  shader.rs  shader_effect.rs  texture.rs  texture_array.rs
crates/onon_render/src/render_resource/render_pipeline/: helpers.rs  mod.rs  pipeline_manager.rs  render_pipeline.rs
crates/onon_render/src/shaders/: triangle.wgsl
shaders/: triangle.wgsl
src/: lib.rs  main.rs  utils.rs  wgpu_actions.rs  wgpu_app.rs  wgpu_app_handler.rs
web/: index.html
