[package]
name = "onon_gfx"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
webgl = ["wgpu/webgl"]

[dependencies]
onon_internals = {path = "crates/onon_internals"}
env_logger = "0.11.8"
log = "0.4.29"
parking_lot = "0.12.5"
wgpu = "28.0.0"
winit = "0.30.12"
cfg-if = "1"
anyhow = "1.0.100"
fern = "0.7.1"
getrandom = { version = "0.3.4", features = ["wasm_js"] }
imp = "0.1.0"
web-time = "1.1.0"
glam = "0.30.9"
wgpu-types = "28.0.0"
pollster = "0.4.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
pollster = "0.4.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.7"
console_log = "1.0"
wasm-bindgen = "0.2.103"
wasm-bindgen-futures = "0.4.53"
web-sys = { version = "0.3.80", features = [
    "Document",
    "Window",
    "Element",
    "Location",
    "console"
]}
