[package]
name = "onon_app"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
onon_render = {path = "../onon_render"}
cfg-if = "1.0.4"
log = "0.4.29"
parking_lot = "0.12.5"
wgpu = "28.0.0"
winit = "0.30.12"

[dependencies.image]
version = "0.25.9"
default-features = false
features = ["png", "jpeg"]

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
pollster = "0.4.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.7"
console_log = "1.0"
wasm-bindgen = "0.2.103"
wasm-bindgen-futures = "0.4.53"
web-sys = { version = "0.3.80", features = [
  "Document",
  "Window",
  "Element",
  "Location",
  "console"
]}
