[package]
name = "onon_log"
version = "0.1.0"
edition = "2024"

[dependencies]
cfg-if = "1.0.4"
fern = "0.7.1"
log = "0.4.29"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.7"
console_log = "1.0"
wasm-bindgen = "0.2.103"
wasm-bindgen-futures = "0.4.53"
web-sys = { version = "0.3.80", features = [
    "Document",
    "Window",
    "Element",
    "Location",
    "console"
]}
