[package]
name = "onon_render"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bytemuck = "1.24.0"
glam = "0.30.9"
winit = "0.30.12"
wgpu = "28.0.0"
anyhow = "1.0.100"
log = "0.4.29"
naga = { version = "28.0.0", features = ["wgsl-in"] }

[dependencies.image]
version = "0.25.9"
default-features = false
features = ["png", "jpeg"]
